# OS

./: README.md
coursework/: CMakeLists.txt  README.md  client.cpp  server.cpp
lab1/: CMakeLists.txt  README.md  child1.cpp  child2.cpp  funcs.cpp  main.cpp  task.hpp
lab2/: CMakeLists.txt  README.md  include.hpp  main.cpp  src.cpp
lab3/: README.md  child1.cpp  child2.cpp  funcs.cpp  main.cpp  task.hpp
lab4/: CMakeLists.txt  README.md  main_dynamic.cpp  main_linking.cpp  main_runtime.cpp  main_static.cpp
lab4/num_sys_lib/: num_sys.cpp  num_sys.hpp
lab4/prime_count_lib/: prime_count.cpp  prime_count.hpp
lab5-7/: CMakeLists.txt  README.md  compute.cpp  control.cpp  topology.hpp
lab8/: README.md
